--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -233,9 +233,9 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
       </div>
-      <div class="small">${e.gwiazdki}</div>
+      <div class="small">UPRAWNIENIA: ${e.gwiazdki}</div>
       </div>
-      <div class="status">${e.status}</div>
+      <div class="status">STATUS: ${e.status}</div>
     `
     results.appendChild(d)
   })
