--- a/regulamin/index.html
+++ b/regulamin/index.html
@@ -1,1 +1,46 @@
-regulamin
+<section id="regulamin" style="max-width:900px;margin:40px auto;padding:20px;background:#ffffff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.08);font-family:Arial,sans-serif;">
+  <h2 style="color:#0B5FA5;">Regulamin publikacji danych w Rejestrze Elektryków</h2>
+
+  <h3>§1. Postanowienia ogólne</h3>
+  <ul>
+    <li>Rejestr Elektryków (dalej „Platforma”) umożliwia użytkownikom publikowanie danych dotyczących ich kwalifikacji zawodowych w zakresie elektryki.</li>
+    <li>Platforma nie weryfikuje danych wprowadzanych przez użytkowników i nie odpowiada za ich prawdziwość.</li>
+  </ul>
+
+  <h3>§2. Definicje</h3>
+  <ul>
+    <li><strong>Użytkownik</strong> – osoba fizyczna lub prawna korzystająca z Platformy w celu publikacji danych.</li>
+    <li><strong>Dane publikowane</strong> – informacje wprowadzone przez Użytkownika w formularzu (np. imię, nazwisko, numer uprawnień, telefon, email, status).</li>
+  </ul>
+
+  <h3>§3. Konto użytkownika</h3>
+  <ul>
+    <li>Każdy Użytkownik zobowiązany jest utworzyć konto na Platformie.</li>
+    <li>Dane publikowane przez Użytkownika są przypisane do jego konta.</li>
+  </ul>
+
+  <h3>§4. Odpowiedzialność</h3>
+  <ul>
+    <li>Użytkownik oświadcza, że dane publikowane w Platformie są prawdziwe i że posiada prawo do ich publikacji.</li>
+    <li>Użytkownik ponosi pełną odpowiedzialność za wprowadzane dane.</li>
+    <li>Administrator Platformy (OREP) nie odpowiada za prawdziwość ani kompletność danych publikowanych przez Użytkowników.</li>
+  </ul>
+
+  <h3>§5. Zgłoszenia naruszeń</h3>
+  <ul>
+    <li>Każdy może zgłosić nieprawdziwe lub naruszające przepisy dane, korzystając z formularza zgłoszeniowego.</li>
+    <li>Administrator po otrzymaniu zgłoszenia zastrzega sobie prawo do zablokowania lub usunięcia wskazanego rekordu.</li>
+  </ul>
+
+  <h3>§6. Status „zweryfikowany”</h3>
+  <ul>
+    <li>Platforma może oznaczać dane jako „zweryfikowane”, jedynie na podstawie przesłanego dokumentu przez Użytkownika.</li>
+    <li>Status „zweryfikowany” nie oznacza, że Platforma gwarantuje kwalifikacje – służy wyłącznie informowaniu innych użytkowników o przesłaniu dokumentu.</li>
+  </ul>
+
+  <h3>§7. Publikacja danych</h3>
+  <ul>
+    <li>Wszystkie dane są publikowane na Platformie w formie publicznej bazy.</li>
+    <li>Użytkownik może w każdej chwili zaktualizować lub usunąć swoje dane.</li>
+  </ul>
+</section>
