--- a/probna/index.html
+++ b/probna/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
-  <!-- Supabase JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
@@ -13,264 +12,310 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f6f8;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
       padding: 20px;
     }
 
-    /* AWATAR GRAFICZNY */
- .avatar-btn {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  background: #2b6cb0;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* wyrównanie w lewo */
-  font-weight: 700;
-  font-size: 20px;
-  margin-bottom: 20px;
-  cursor: default;
-}
-
-
-    /* FORMULARZ REJESTRACJI */
-    form {
-      background-color: #ffffff;
-      padding: 30px 40px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    .form-wrapper {
       width: 100%;
       max-width: 600px;
     }
 
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
     h2 {
       text-align: center;
-      color: #333;
       margin-bottom: 20px;
     }
 
     label {
-      display: block;
       margin-top: 15px;
-      margin-bottom: 5px;
-      color: #555;
+      display: block;
       font-weight: 600;
     }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 15px;
-      transition: border 0.2s;
+    /* Uniwersalny styl dla wszystkich pól formularza */
+    input, textarea, select {
+      width: 100%;           /* pełna szerokość formularza */
+      padding: 10px;         /* identyczny padding */
+      border-radius: 6px;    /* zaokrąglone rogi */
+      border: 1px solid #ccc;/* spójny border */
+      font-size: 16px;       /* dopasowany font do reszty */
+      box-sizing: border-box;/* uwzględnia padding w szerokości */
+      background-color: #fff;/* białe tło jak reszta pól */
+      color: #000;           /* kolor tekstu */
     }
 
-    input:focus, select:focus, textarea:focus {
-      border-color: #4CAF50;
-      outline: none;
+    /* Pole select, gdy jest disabled, wygląd spójny */
+    select:disabled {
+      background-color: #f4f6f8; /* lekko szare tło */
+      color: #555;                /* ciemniejszy tekst, czytelny */
+      cursor: not-allowed;        /* wskaźnik niedostępności */
+    }
+
+    /* Po aktywowaniu select wygląda normalnie */
+    select:not(:disabled) {
+      background-color: #fff;
+      color: #000;
     }
 
     textarea {
-      resize: vertical;
       min-height: 80px;
     }
 
-    input[type="file"] {
-      margin-top: 10px;
-    }
-
-    button {
+    button[type="submit"] {
       margin-top: 20px;
       width: 100%;
       padding: 12px;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-      font-weight: bold;
+      background: #4CAF50;
+      color: #fff;
       border: none;
       border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #45a049;
+    button[type="submit"]:hover {
+      background: #45a049;
+    }
+
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+
+    #close-btn:hover {
+      color: #000;
     }
 
     #result {
-      font-weight: bold;
-      padding: 10px;
       margin-top: 15px;
+      padding: 10px;
       text-align: center;
-      border-radius: 6px;
-    }
-
-    .success {
-      background-color: #4CAF50;
-      color: white;
+      font-weight: bold;
     }
 
     .error {
-      background-color: #f44336;
-      color: white;
+      background: #f44336;
+      color: #fff;
     }
 
     #loading {
       display: none;
       text-align: center;
-      color: #333;
-      font-weight: bold;
       margin-top: 10px;
+      font-weight: bold;
     }
   </style>
 </head>
 
 <body>
+<div class="form-wrapper">
+<form id="register-form">
 
-  <!-- AWATAR GRAFICZNY (INFORMACYJNY) -->
-  <button class="avatar-btn" id="avatarBtn">⚡
-</button>
+  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
 
-  <!-- FORMULARZ REJESTRACJI -->
-  <form id="register-form">
-    <h2>Rejestracja</h2>
+  <h2 id="form-title">Rejestracja</h2>
 
-    <label for="imie">Imię:</label>
-    <input type="text" id="imie" name="imie" required
-     oninput="this.value = this.value.toUpperCase();">
+  <label>Imię</label>
+  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
 
+  <label>Nazwisko</label>
+  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
 
-    <label for="nazwisko">Nazwisko:</label>
-    <input type="text" id="nazwisko" name="nazwisko" required 
-    oninput="this.value = this.value.toUpperCase();">
+  <label for="wojewodztwo">Województwo</label>
+  <select id="wojewodztwo" required>
+    <option value="">— wybierz województwo —</option>
+  </select>
 
-    <label for="miasto">Miasto:</label>
-    <input type="text" id="miasto" name="miasto">
+  <label for="miasto">Miasto</label>
+  <select id="miasto" required disabled>
+    <option value="">— wybierz miasto —</option>
+  </select>
 
-    <label for="wojewodztwo">Województwo:</label>
-    <input type="text" id="wojewodztwo" name="wojewodztwo">
+  <label>Nr upr. EKSPLOATACJA</label>
+  <textarea id="nrE"></textarea>
 
-    <label for="nrE">Nr uprawnień E:</label>
-    <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej - nrEPomiary"></textarea>
-   
-    <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
-    <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
+  <textarea id="nrEPomiary"></textarea>
 
-    <label for="nrD">Nr uprawnień D:</label>
-    <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+  <label>Nr upr. DOZÓR</label>
+  <textarea id="nrD"></textarea>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email">
+  <label>Email</label>
+  <input id="email" readonly>
 
-    <label for="telefon">Telefon:</label>
-    <input type="tel" id="telefon" name="telefon">
+  <label>Telefon</label>
+  <input id="telefon">
 
-    <label for="zajmujeSie">Zajmuje się:</label>
-    <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Tu możesz podać informację o Tobie, które zostaną wyświetlone osobie szukającej elektryka w Twojej okolicy"></textarea>
+  <label>Zajmuje się</label>
+  <textarea id="zajmujeSie"></textarea>
 
-    <label for="plik">Załącz skan uprawnień:</label>
-    <input type="file" id="plik" name="plik" accept="*/*" multiple>
+  <label>Załącz skan uprawnień</label>
+  <input type="file" id="plik" multiple>
 
-    <button type="submit">Zarejestruj</button>
+  <button type="submit" id="submit-btn">Zarejestruj</button>
 
-    <p id="result"></p>
-    <p id="loading">Trwa rejestracja, proszę czekać...</p>
-  </form>
+  <div id="loading">Zapisywanie danych...</div>
+  <div id="result"></div>
+</form>
+</div>
 
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+<script type="module">
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-    const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
-    const supabase = createClient(supabaseUrl, supabaseKey)
+const supabase = createClient(
+  'https://tfbqqduxtsacvwfigsvt.supabase.co',
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+)
 
-    const avatarBtn = document.getElementById('avatarBtn')
-    const emailInput = document.getElementById('email')
+let currentUser = null
 
-    // Awatar zmienia inicjał po wpisaniu e-maila
-    emailInput.addEventListener('input', () => {
-      const email = emailInput.value.trim()
-      if (email) {
-        avatarBtn.textContent = email[0].toUpperCase()
-      } else {
-        avatarBtn.textContent = '👤'
-      }
-    })
+const fields = [
+  'imie','nazwisko','miasto','wojewodztwo',
+  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
+]
 
-    document.getElementById('register-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      document.getElementById('loading').style.display = 'block';
+async function loadWojewodztwa() {
+  const { data, error } = await supabase
+    .from('wojewodztwa')
+    .select('id, nazwa')
+    .order('nazwa')
 
-      const imie = document.getElementById('imie').value
-      const nazwisko = document.getElementById('nazwisko').value
-      const miasto = document.getElementById('miasto').value
-      const wojewodztwo = document.getElementById('wojewodztwo').value
-      const nrE = document.getElementById('nrE').value
-      const nrEPomiary = document.getElementById('nrEPomiary').value
-      const nrD = document.getElementById('nrD').value
-      const email = document.getElementById('email').value
-      const telefon = document.getElementById('telefon').value
-      const zajmujeSie = document.getElementById('zajmujeSie').value
+  if (error) {
+    console.error('Błąd ładowania województw:', error)
+    return
+  }
 
-      const plikInput = document.getElementById('plik');
-      let plikUrls = [];
+  const wojSelect = document.getElementById('wojewodztwo')
+  data.forEach(w => {
+    const option = document.createElement('option')
+    option.value = w.id
+    option.textContent = w.nazwa
+    wojSelect.appendChild(option)
+  })
+}
 
-      if (plikInput.files.length > 0) {
-        for (let i = 0; i < plikInput.files.length; i++) {
-          const file = plikInput.files[i];
-          const filePath = `permissions/${Date.now()}_${i}_${file.name}`;
+document.getElementById('wojewodztwo').addEventListener('change', async function() {
+  const wojId = this.value
+  const miastoSelect = document.getElementById('miasto')
 
-          const { error: uploadError } = await supabase.storage
-            .from('attachments')
-            .upload(filePath, file);
+  if (!wojId) {
+    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+    miastoSelect.disabled = true
+    return
+  }
 
-          if (uploadError) {
-            document.getElementById('loading').style.display = 'none';
-            document.getElementById('result').textContent = 'Błąd przesyłania pliku: ' + uploadError.message;
-            document.getElementById('result').classList.add('error');
-            return;
-          }
+  const { data, error } = await supabase
+    .from('miasta')
+    .select('id, nazwa')
+    .eq('wojewodztwo_id', wojId)
+    .order('nazwa')
 
-          const { data: publicUrlData } = supabase
-            .storage
-            .from('attachments')
-            .getPublicUrl(filePath);
+  if (error) {
+    console.error('Błąd ładowania miast:', error)
+    return
+  }
 
-          plikUrls.push(publicUrlData.publicUrl);
-        }
-      }
+  miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+  data.forEach(m => {
+    const option = document.createElement('option')
+    option.value = m.id
+    option.textContent = m.nazwa
+    miastoSelect.appendChild(option)
+  })
 
-      const plikiString = plikUrls.join(',');
+  miastoSelect.disabled = false
+})
 
-      const { error } = await supabase
-        .from('tabela_elektrykow')
-        .insert([{
-          imie, nazwisko, miasto, wojewodztwo,
-          nrE, nrEPomiary, nrD, email, telefon,
-          zajmujeSie, plik: plikiString
-        }]);
-     
+document.getElementById('close-btn').addEventListener('click', () => {
+  window.location.href = 'https://orep.pl/';
+})
 
-      const result = document.getElementById('result')
-      result.classList.remove('success', 'error')
-      document.getElementById('loading').style.display = 'none';
+document.addEventListener('DOMContentLoaded', async () => {
 
-      if (error) {
-        result.textContent = 'Błąd: ' + error.message
-        result.classList.add('error')
-      } else {
-        // PRZEKIEROWANIE po sukcesie
-        window.location.href = '/logowanie';
-      }
-    });
-  </script>
+  loadWojewodztwa()
 
+  const { data: { user } } = await supabase.auth.getUser()
+  if (!user) return
+
+  currentUser = user
+  email.value = user.email
+
+  const { data } = await supabase
+    .from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
+
+  if (data) {
+    document.getElementById('form-title').textContent = 'Aktualizacja danych'
+    document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
+    fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
+  }
+})
+
+document.getElementById('register-form').addEventListener('submit', async e => {
+  e.preventDefault()
+  loading.style.display = 'block'
+  result.textContent = ''
+  result.className = ''
+
+  if (nrE.value && nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Wybierz tylko jeden rodzaj eksploatacji'
+    result.className = 'error'
+    return
+  }
+
+  if (nrD.value && !nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Do DOZORU wymagane są pomiary'
+    result.className = 'error'
+    return
+  }
+
+  let plikUrls = []
+  if (plik.files.length) {
+    for (let i = 0; i < plik.files.length; i++) {
+      const path = `permissions/${currentUser.id}/${Date.now()}_${plik.files[i].name}`
+      await supabase.storage.from('attachments').upload(path, plik.files[i], { upsert: true })
+      const { data } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
+      plikUrls.push(data.signedUrl)
+    }
+  }
+
+  const payload = { email: currentUser.email }
+  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik = plikUrls.join(',')
+
+  const { error } = await supabase
+    .from('tabela_elektrykow')
+    .upsert(payload, { onConflict: 'email' })
+
+  loading.style.display = 'none'
+
+  if (error) {
+    result.textContent = error.message
+    result.className = 'error'
+  } else {
+    window.location.href = 'https://orep.pl/logowanie';
+  }
+})
+</script>
 </body>
 </html>
