--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -173,10 +173,11 @@
   <input type="file" id="plik" multiple>
 
   <!-- ✅ Klauzula RODO -->
-  <label class="rodo-label">
-    <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
-  </label>
+  <label class="rodo-label" 
+       style="display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px; text-transform:uppercase;">
+  <input type="checkbox" id="rodo" required style="margin-right:10px;">
+  Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+</label>
 
   <button type="submit" id="submit-btn">Zarejestruj</button>
 
