--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -173,8 +173,7 @@
   <input type="file" id="plik" multiple>
 
   <!-- ✅ Klauzula RODO -->
-  <label class="rodo-label" 
-       style="display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px; text-transform:uppercase;">
+  <label class="rodo-label" style="display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px;">
   <input type="checkbox" id="rodo" required style="margin-right:10px; border:2px solid orange;">
   Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
 </label>
